translation-tool/inputs/source_meta/objects/HSvc_Manage_Suspension__c.object
<CustomObject>
    <description>Provide ability to allow CS admins to limit how many times an account can request Suspensions, for a specific type of suspension in a specified rolling period.</description>
    <fields>
        <fullName>Account_Company_ID__c</fullName>
        <description>The Account Company ID for which Suspensions are applicable. This can be applicable for both Parent and Child Accounts of a given Account Company ID. For Example, If Account Company ID is defined as &apos;HNSDWAYISP&apos;, it is applicable for all consumer accounts below this Account Company ID. If left blank, it is applicable for all accounts</description>
        <label>Account Company ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The specific Account to which Suspension settings are being defined. If left blank, it is applicable for all Accounts.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manage Suspensions</relationshipLabel>
        <relationshipName>Manage_Suspensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ECC_Team__c</fullName>
        <description>Executive Customer Care team</description>
        <label>Exclude for Queues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ECC_Team</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_ActiveFormula__c</fullName>
        <description>determines whether active or not</description>
        <formula>AND( 
HSvc_ExpiryDate__c &gt;= TODAY(), 
HSvc_EffectiveDate__c &lt;= TODAY() 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_EffectiveDate__c</fullName>
        <description>The Date From which this rule is applicable</description>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_ExpiryDate__c</fullName>
        <description>The Date until which the rule is applicable</description>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hsvc_NumberOfOccurances__c</fullName>
        <description>This field will be used to limit the number of times that a transaction can happen.</description>
        <label>Number Of Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Days_Limit__c</fullName>
        <description>Maximum no.of days that an Account can be Suspended for a particular Suspension Type in a Rolling over period.For example, if CS can limit 180 day maximum general suspension on every account every 12 month rolling period</description>
        <label>Maximum Days Limit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rolling_Period_In_Days__c</fullName>
        <description>The Rolling Over Period before which an Account can request for a Suspension again.</description>
        <label>Rolling Period (In Days)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suspension_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a reference field to Account Transaction Reason. CS Admin can specify the Transaction Reason for which the suspension rules are defined</description>
        <label>Suspension Type</label>
        <referenceTo>HSvc_AccTrxnReason__c</referenceTo>
        <relationshipLabel>Manage Suspensions</relationshipLabel>
        <relationshipName>Manage_Suspensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Manage Suspension</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Manage Suspension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manage Suspensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetInThePast</fullName>
        <active>true</active>
        <errorConditionFormula>OR( HSvc_ExpiryDate__c &lt; TODAY(), HSvc_ExpiryDate__c &lt; HSvc_EffectiveDate__c)</errorConditionFormula>
        <errorDisplayField>HSvc_EffectiveDate__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>